<package>

  <name>velodyne_vls</name>
  <version>1.3.0</version>
  <description>
    Basic ROS support for the Velodyne VLS3D LIDARs.
  </description>
  <maintainer email="nbarot@velodyne.com">Nitinkumar Barot</maintainer>
  <author> Jack O'Quin</author>
  <license>BSD</license>
  <!--
  <review status="API reviewed" notes="2012-02-02"/>
  -->

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>velodyne_driver_vls</run_depend>
  <run_depend>velodyne_laserscan_vls</run_depend>
  <run_depend>velodyne_msgs_vls</run_depend>
  <run_depend>velodyne_pointcloud_vls</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
